# terraform-worker

./: .gitignore  .isort.cfg  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.py  test-requirements.txt
.circleci/: config.yml
.github/workflows/: ci.yml  codeql.yml
docs/source/: commands.rst  concepts.rst  conf.py  features.rst  hooks.rst  index.rst  install.rst  quick-start.rst  schema.rst
docs/source/_static/: main.tf
docs/superpowers/specs/: 2026-04-12-slack-handler-design.md
tests/: conftest.py  test_app_state.py  test_cli.py  test_cli_options.py  test_definitions.py  test_main.py  test_plugins.py  test_terraform.py
tests/authenticators/: test_auth_aws.py  test_auth_google.py  test_authenticators_collection.py  test_authenticatorscollection.py  test_aws_auth.py  test_base_auth.py
tests/backends/: test_backends.py  test_backends_base.py  test_backends_s3.py  test_base.py  test_gcs.py  test_s3.py
tests/commands/: test_base.py  test_base_command.py  test_config.py  test_env.py  test_root.py  test_terraform.py  test_version.py
tests/copier/: test_copier_factory.py  test_copier_fs.py  test_copier_git.py
tests/definitions/: test_definitions_collection.py  test_definitions_model.py  test_definitions_plan.py  test_definitions_prepare.py  test_definitions_prepare_extra.py
tests/fixtures/: base_config_test.hcl  base_config_test.json  base_config_test.yaml  gcp_test_config.yaml  test_config.yaml  test_config_invalid_j2.yaml  test_config_with_options.yaml
tests/fixtures/definitions/test_a/: test.tf  versions.tf
tests/fixtures/definitions/test_b/: test.tf
tests/fixtures/states/: empty.tfstate  occupied.tfstate
tests/fixtures/terraform-modules/test_a/: test.tf
tests/fixtures/terraform-modules/test_b/: test.tf
tests/handlers/: test_bitbucket_handler.py  test_exceptions.py  test_handlers_collection_order.py  test_handlers_results.py  test_openai_handler.py  test_s3_handler.py  test_slack_handler.py  test_snyk_scan.py  test_sqs_handler.py  test_trivy.py
tests/helpers/scripts/: mock_snyk_failure.sh  mock_snyk_success.sh
tests/providers/: test_aws.py  test_google.py  test_google_beta.py
tests/types/: test_cli_options.py
tests/util/: test_copier.py  test_hcl_engine_parity.py  test_hcl_parser.py  test_hooks.py  test_log.py  test_system.py  test_terraform_util.py  test_util_cli.py  test_util_hooks.py  test_util_log.py  test_util_remote_vars.py  test_util_system.py  test_util_terraform.py  test_util_terraform_helpers.py
tfworker/: __init__.py  app_state.py  cli.py  cli_options.py  constants.py  definitions.py  exceptions.py  main.py  options.py  plugins.py  terraform.py  types.py
tfworker/authenticators/: __init__.py  aws.py  base.py  collection.py  google.py
tfworker/backends/: __init__.py  backends.py  base.py  gcs.py  s3.py  selector.py
tfworker/commands/: __init__.py  base.py  clean.py  cli_options.py  config.py  env.py  root.py  terraform.py  version.py
tfworker/config/: __init__.py
tfworker/copier/: __init__.py  factory.py  fs_copier.py  git_copier.py
tfworker/custom_types/: config_file.py  terraform.py
tfworker/definitions/: __init__.py  collection.py  model.py  plan.py  prepare.py
tfworker/handlers/: __init__.py  base.py  bitbucket.py  collection.py  exceptions.py  openai.py  registry.py  results.py  s3.py  slack.py  snyk.py  sqs.py  trivy.py
tfworker/providers/: __init__.py  aws.py  base.py  collection.py  gcp.py  generic.py  google.py  google_beta.py  helm.py  model.py  providers_collection.py
tfworker/terraform/: __init__.py
tfworker/types/: __init__.py  app_state.py  cli_options.py  config_file.py  definition.py  freezable_basemodel.py  json.py  provider.py  singleton.py  terraform.py
tfworker/util/: _remove_for_refactor_copier.py  cli.py  copier.py  hcl2_transformer.py  hcl_parser.py  hooks.py  log.py  remote_vars.py  system.py  terraform.py  terraform_helpers.py
tfworker/util/copier/: copier.py  factory.py  fs_copier.py  git_copier.py  register_copiers.py
tools/hcl2json/: go.mod  go.sum  main.go  main_test.go
trash/: definitions.py
worker/: __init__.py  cli.py  main.py  terraform.py  vault.py
worker/providers/: __init__.py  aws.py
