[tool.poetry]
name = "terraform-worker"
version = "0.12.0"
description = "An orchestration tool for Terraform"
authors = ["Richard Maynard <richard.maynard@gmail.com>"]
packages = [
    { include="tfworker", from="." },
]
readme = "README.md"

repository = "https://github.com/ephur/terraform-worker"
homepage = "https://github.com/ephur/terraform-worker"
documentation = "https://github.com/ephur/terraform-worker"

license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Systems Administration"
]

[tool.poetry.dependencies]
python = "^3.11"
atlassian-python-api = "^3.41.21"
boto3 = "^1.42.88"
click = "^8.3.2"
google-cloud-storage = "^2.19.0"
jinja2 = "^3.1.6"
mergedeep = "^1.3.4"
pydantic = "^2.12.5"
python-hcl2 = "^4.3.5"
pyyaml = "^6.0.3"
setuptools = "^78.1.1"
pydantic-settings = "^2.13.1"
packaging = "^24.2"
openai = "^1.109.1"
urllib3 = ">=2.6.3"

[tool.poetry.scripts]
worker = 'tfworker.cli:cli'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1,<27.0"
coverage = "^7.13.5"
deepdiff = ">=8.6.2,<9"
flake8 = "^7.3.0"
ipython = "^8.39.0"
isort = "^5.13.2"
pytest = ">=8.4.2,<10.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.15.1"
pytest-socket = "^0.7.0"
pytest-timeout = "2.3.1"
seed-isort-config = "^2.2.0"
Sphinx = "^7.4.7"
wheel = ">=0.46.3,<0.47"
moto = {version = "^5.1.22", extras = ["sts", "dynamodb", "s3"]}
mypy = "^1.20.0"


[tool.pytest.ini_options]
addopts = "--capture=sys --cov=tfworker --cov-report= -m 'not performance'"
markers = [
    "performance: mark a test as a performance test"
]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
pretty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
